<resources>
    <string name="app_name">KeepFit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">KEEPFIT</string>
    <string name="menu_report">Report</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reset">Reset results</string>
    <string name="menu_pushup">Pushup</string>
</resources>